samples/_failures_safe/1761128034_54e04a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91bed689.c: In function ‘main’:
./samples/SAFE/__tmp_91bed689.c:147:59: error: ‘MAX’ undeclared (first use in this function)
  147 |     printf("Enter text to process (max %d characters): ", MAX
      |                                                           ^~~
./samples/SAFE/__tmp_91bed689.c:147:59: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_91bed689.c:147:62: error: expected ‘)’ at end of input
  147 |     printf("Enter text to process (max %d characters): ", MAX
      |           ~                                                  ^
      |                                                              )
./samples/SAFE/__tmp_91bed689.c:147:5: error: expected declaration or statement at end of input
  147 |     printf("Enter text to process (max %d characters): ", MAX
      |     ^~~~~~
